--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
             <div class="card">
                 <h3>Lightweight</h3>
-                <p>Synapse X is simple yet powerful. We give you the tools and let you play your way.</p>
+                <p>KRNL is simple yet powerful. We give you the tools and let you play your way.</p>
             </div>
             <div class="card">
                 <h3>Stable</h3>
@@ -239,7 +239,7 @@
             </div>
             <div class="card">
                 <h3>Private</h3>
-                <p>Synapse X collects no personal information aside from minimal payment data.</p>
+                <p>KRNL collects no personal information aside from minimal payment data.</p>
             </div>
         </div>
     </div>
@@ -261,6 +261,7 @@
     </script>
 </body>
 </html>
+
 
 
 
